fix spacing between drag handle and label

--- a/wptedit.css
+++ b/wptedit.css
@@ -47,7 +47,7 @@ body {
 	background-color: white;
 	border-bottom: 1px solid #dddddd;
 	padding: 8px 15px;
-	padding-left: 40px;
+	padding-left: calc(20px + 1em);
 	transition: all 0.3s ease;
 }
 .waypoint:last-child {
